Fix header and footer spacing for mobile useragents

--- a/style/main.css
+++ b/style/main.css
@@ -6,6 +6,12 @@ html {
 
 body {
     padding-top: 50px;
+	margin: 0;
+}
+
+html body {
+	height: 100%;
+	width: 100%;
 }
 
 main {
@@ -25,6 +31,7 @@ footer {
 	margin: 0;
 	position:absolute;
 	left: 0;
+	//bottom: 0;
 	overflow:hidden;
 	margin-top:50px;
 	border-top:1px solid black;
